--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
-body {
+
+	html, body{
     background-color: #121212;
-  }
+		padding: 0;
+		margin:0;
+		height: 100%;
+	}
+
+	.main-body{
+		width: 80%;
+	}
+	.center {
+	  display: block;
+	  margin-left: auto;
+	  margin-right: auto;
+	}
+
+	.login_and_signup_container{
+		display:flex;
+		justify-content: space-between;
+	}
+
+	.login{
+		width:48%
+	}
+
+	.signup{
+		width:48%
+	}
+
+	#green-button{
+		background-color: #1DB954;
+		width: 100%;
+	}
