--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 		padding: 0;
 		margin:0;
 		height: 100%;
-		font-family: sans-serif;
+		font-family: "Rubik", sans-serif;
 	}
 
 	.main-body{
@@ -80,7 +80,7 @@
 	.main-container {
 		display: flex;
 		padding: 20px;
-		flex-basis: : 80%;
+		flex-basis: 80%;
 		justify-content: center;
   	align-items: center;
 		margin: auto;
@@ -105,7 +105,7 @@
 		margin-right: 80px;
 		margin-left: 20px;
 		flex-basis: 50%;
-		flex: 0 0 10%
+		flex: 0 0 10%;
 		flex-wrap: wrap;
 		height: 760px;
 
