--- a/pages/styles.css
+++ b/pages/styles.css
@@ -114,7 +114,7 @@
 		flex: 2;
 		margin: 20px;
 		flex-basis: auto;
-		background-image: url(images/Khalid_-_Product_Page_Banner.jpg);
+		background-image: url(../images/Khalid_-_Product_Page_Banner.jpg);
 		background-size: cover;
 		height: 250px;
 		padding: 40px;
