--- a/pages/styles.css
+++ b/pages/styles.css
@@ -223,3 +223,12 @@ CSS that is used on one page
   margin-left: auto;
   margin-right: auto;
 }
+
+/*User Playlists Page*/
+.profile-pic{
+	width:100%;
+}
+.playlist-pic{
+	width:100%;
+	margin-bottom: 3px;
+}
