--- a/pages/styles.css
+++ b/pages/styles.css
@@ -33,6 +33,8 @@ html, body{
   padding-left: 10px;
   padding-right: 10px;
   border-radius: 25px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 .column-content{
   padding: 20px 20px 20px 20px;
@@ -177,6 +179,9 @@ CSS that is used on one page
 }
 
 /* Home Page */
+.welcome-message{
+	margin-top: 15px;
+}
 .picture-row{
   margin-top: 15px;
 }
