--- a/stylesheets/dark.css
+++ b/stylesheets/dark.css
@@ -46,3 +46,24 @@ body{
 .leader{
   color: #1DB954;
 }
+.pagination > li > a{
+    background-color: white;
+    color: black;
+}
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover{
+    color: #5a5a5a;
+    background-color: #eee;
+    border-color: #ddd;
+}
+.pagination > .active > a{
+    color: white;
+    background-color: #1DB954 !important;
+    border: solid 1px #1DB954 !important;
+}
+.pagination > .active > a:hover{
+  background-color: #1DB954 !important;
+  border: solid 1px #1DB954 !important;
+}
