new results page

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -230,3 +230,11 @@ CSS that is used on one page
 .profile{
 	width: 80%;
 }
+
+/*Results page*/
+.spotify-results{
+	display: block;
+}
+.database-results{
+	display: none;
+}
